// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  anyTouched={false}
  array={
    Object {
      "insert": [Function],
      "move": [Function],
      "pop": [Function],
      "push": [Function],
      "remove": [Function],
      "removeAll": [Function],
      "shift": [Function],
      "splice": [Function],
      "swap": [Function],
      "unshift": [Function],
    }
  }
  asyncValidate={[Function]}
  asyncValidating={false}
  autofill={[Function]}
  blur={[Function]}
  callToAction="ADICIONAR ENDEREÇO"
  change={[Function]}
  clearAsyncError={[Function]}
  clearFields={[Function]}
  clearSubmit={[Function]}
  clearSubmitErrors={[Function]}
  destroy={[Function]}
  dirty={false}
  dispatch={[Function]}
  error={undefined}
  form="addresses"
  handleSubmit={[Function]}
  initialValues={undefined}
  initialize={[Function]}
  initialized={false}
  invalid={false}
  onSubmit={[Function]}
  pristine={true}
  pure={true}
  reset={[Function]}
  resetSection={[Function]}
  submit={[Function]}
  submitFailed={false}
  submitSucceeded={false}
  submitting={false}
  title="Adicionar Endereço"
  touch={[Function]}
  triggerSubmit={undefined}
  untouch={[Function]}
  valid={true}
  warning={undefined}
>
  Dialog - 
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      onDragStart={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <label
        className="MuiFormLabel-root-12 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
        data-shrink={false}
        htmlFor={undefined}
      >
        Tipo
      </label>
      <div
        className="MuiInputBase-root-39 MuiInput-root-26 MuiInput-underline-30 MuiInputBase-fullWidth-48 MuiInput-fullWidth-33 MuiInputBase-formControl-40 MuiInput-formControl-27"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-19"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-20 MuiSelect-selectMenu-23 MuiInputBase-input-49 MuiInput-input-34"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id={undefined}
            name="addressType"
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-56 MuiSelect-icon-25"
            color={undefined}
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-69"
      id="name-error-text"
    />
  </div>
  <div
    label="Endereço com rua, número e complemento"
    name="streetAddress"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Cidade"
    name="city"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Estado"
    name="state"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="País"
    name="country"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="CEP"
    name="zipCode"
    type="text"
  />
  <div
    label="Telefone para contato"
    name="phoneNumber"
    type="text"
  />
  <div />
</div>
`;

exports[`with error renders correctly 1`] = `
<div
  anyTouched={false}
  array={
    Object {
      "insert": [Function],
      "move": [Function],
      "pop": [Function],
      "push": [Function],
      "remove": [Function],
      "removeAll": [Function],
      "shift": [Function],
      "splice": [Function],
      "swap": [Function],
      "unshift": [Function],
    }
  }
  asyncValidate={[Function]}
  asyncValidating={false}
  autofill={[Function]}
  blur={[Function]}
  callToAction="ADICIONAR ENDEREÇO"
  change={[Function]}
  clearAsyncError={[Function]}
  clearFields={[Function]}
  clearSubmit={[Function]}
  clearSubmitErrors={[Function]}
  createError="foo error"
  destroy={[Function]}
  dirty={false}
  dispatch={[Function]}
  error={undefined}
  form="addresses"
  handleSubmit={[Function]}
  initialValues={undefined}
  initialize={[Function]}
  initialized={false}
  invalid={false}
  onSubmit={[Function]}
  pristine={true}
  pure={true}
  reset={[Function]}
  resetSection={[Function]}
  submit={[Function]}
  submitFailed={false}
  submitSucceeded={false}
  submitting={false}
  title="Adicionar Endereço"
  touch={[Function]}
  triggerSubmit={undefined}
  untouch={[Function]}
  valid={true}
  warning={undefined}
>
  Dialog - 
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      onDragStart={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <label
        className="MuiFormLabel-root-12 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
        data-shrink={false}
        htmlFor={undefined}
      >
        Tipo
      </label>
      <div
        className="MuiInputBase-root-39 MuiInput-root-26 MuiInput-underline-30 MuiInputBase-fullWidth-48 MuiInput-fullWidth-33 MuiInputBase-formControl-40 MuiInput-formControl-27"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-19"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-20 MuiSelect-selectMenu-23 MuiInputBase-input-49 MuiInput-input-34"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id={undefined}
            name="addressType"
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-56 MuiSelect-icon-25"
            color={undefined}
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-69"
      id="name-error-text"
    />
  </div>
  <div
    label="Endereço com rua, número e complemento"
    name="streetAddress"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Cidade"
    name="city"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="Estado"
    name="state"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="País"
    name="country"
    type="text"
    validate={
      Array [
        [Function],
      ]
    }
  />
  <div
    label="CEP"
    name="zipCode"
    type="text"
  />
  <div
    label="Telefone para contato"
    name="phoneNumber"
    type="text"
  />
  <div>
    foo error
  </div>
</div>
`;
